Fix playlist overflow adding scroll to main view

--- a/css/app.css
+++ b/css/app.css
@@ -44,6 +44,14 @@ body {
 
 .playlists {
     padding-left: 0;
+
+    position: absolute;
+    top: 10px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+
+    overflow-y: auto;
 }
 
 .playlists > li {
